correct conteiner gap

--- a/src/App.css
+++ b/src/App.css
@@ -161,7 +161,7 @@ h1, h2, h3 h4 h5, h6, p {
   .container {
     max-width: calc(1110rem/16);
     padding: 109px 168px 100px 158px;
-    gap: calc(70rem/16);
+    gap: calc(76rem/16);
     background-image: url(./assets/images/bg-pattern-top-desktop.svg), url(./assets/images/bg-pattern-bottom-desktop.svg);
     background-repeat: no-repeat, no-repeat;
     background-position: 0% 0%, 100% 100%;
